# crustivity

./: Cargo.toml
crustivity_core/: Cargo.toml
crustivity_core/src/: constraints.rs  lib.rs  main.rs  spawner.rs  stable_vec.rs  world.rs
crustivity_ui/: Cargo.toml
crustivity_ui/src/: interaction.rs  lib.rs  main.rs
