[package]
name = "crustivity_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crustivity_ui"
path = "src/lib.rs"

[[bin]]
name = "crustivity_ui"
path = "src/main.rs"

[dependencies]
winit = "0.29.0-beta.0"
vger = "0.2.7"
pollster = "0.3.0"
vello = { git = "https://github.com/linebender/vello", rev = "5b96e020125975272457689e2bcee9e7b8a31682"}
wgpu = "0.16.3"
crustivity_core = { path = "../crustivity_core" }